Fail to open the file #101210

Closed
opened 2022-09-20 08:02:20 +02:00 by Sergey · 9 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: Intel(R) HD Graphics 630 Intel 4.5.0 - Build 25.20.100.6471

Blender Version
Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: 0759f671ce
Worked: version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: dc2d180181

Short description of error
I was testing old files and found that one of them crashes Blender. It's not important for me but decided that it's better to report.

Exact steps for others to reproduce the error
smooth seed.blend

blender.crash.txt

  1. Open the file
  2. Crash
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: Intel(R) HD Graphics 630 Intel 4.5.0 - Build 25.20.100.6471 **Blender Version** Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: `0759f671ce` Worked: version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: `dc2d180181` **Short description of error** I was testing old files and found that one of them crashes Blender. It's not important for me but decided that it's better to report. **Exact steps for others to reproduce the error** [smooth seed.blend](https://archive.blender.org/developer/F13524765/smooth_seed.blend) [blender.crash.txt](https://archive.blender.org/developer/F13524767/blender.crash.txt) 1. Open the file 2. Crash
Author

Added subscriber: @randum

Added subscriber: @randum

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

I can confirm the crash on reading and updating node tree:
link->tosock was nullptr

>	blender.exe!blender::bke::node_tree_runtime::update_internal_links(const bNodeTree & ntree) Line 80	C++

 	blender.exe!blender::bke::node_tree_runtime::ensure_topology_cache::__l2::<lambda_1>::operator()() Line 405	C++
 	blender.exe!blender::FunctionRef<void __cdecl(void)>::callback_fn<`blender::bke::node_tree_runtime::ensure_topology_cache'::`2'::<lambda_1>>(__int64 callable) Line 95	C++
 	blender.exe!blender::FunctionRef<void __cdecl(void)>::operator()() Line 132	C++
 	blender.exe!tbb::interface7::internal::delegated_function<blender::FunctionRef<void __cdecl(void)> const ,void>::operator()() Line 97	C++
 	[External Code]	
 	blender.exe!tbb::interface7::internal::isolate_impl<void,blender::FunctionRef<void __cdecl(void)> const>(const blender::FunctionRef<void __cdecl(void)> & f) Line 217	C++
 	blender.exe!tbb::interface7::this_task_arena::isolate<blender::FunctionRef<void __cdecl(void)>>(const blender::FunctionRef<void __cdecl(void)> & f) Line 473	C++
 	blender.exe!blender::threading::isolate_task<blender::FunctionRef<void __cdecl(void)>>(const blender::FunctionRef<void __cdecl(void)> & function) Line 136	C++
 	blender.exe!blender::bke::node_tree_runtime::double_checked_lock_with_task_isolation::__l2::<lambda_1>::operator()() Line 42	C++
 	blender.exe!blender::FunctionRef<void __cdecl(void)>::callback_fn<`blender::bke::node_tree_runtime::double_checked_lock_with_task_isolation'::`2'::<lambda_1>>(__int64 callable) Line 95	C++
 	blender.exe!blender::FunctionRef<void __cdecl(void)>::operator()() Line 132	C++
 	blender.exe!blender::bke::node_tree_runtime::double_checked_lock(std::mutex & mutex, bool & data_is_dirty, blender::FunctionRef<void __cdecl(void)> fn) Line 35	C++
 	blender.exe!blender::bke::node_tree_runtime::double_checked_lock_with_task_isolation(std::mutex & mutex, bool & data_is_dirty, blender::FunctionRef<void __cdecl(void)> fn) Line 43	C++
 	blender.exe!blender::bke::node_tree_runtime::ensure_topology_cache(const bNodeTree & ntree) Line 425	C++
 	blender.exe!bNodeTree::ensure_topology_cache() Line 432	C++
 	blender.exe!blender::bke::NodeTreeMainUpdater::update_socket_link_and_use(bNodeTree & tree) Line 1022	C++
 	blender.exe!blender::bke::NodeTreeMainUpdater::update_tree(bNodeTree & ntree) Line 985	C++
 	blender.exe!blender::bke::NodeTreeMainUpdater::update_rooted(blender::Span<bNodeTree *> root_ntrees) Line 847	C++
 	blender.exe!blender::bke::NodeTreeMainUpdater::update() Line 816	C++
 	blender.exe!BKE_ntree_update_main(Main * bmain, NodeTreeUpdateExtraParams * params) Line 1706	C++
 	blender.exe!ntreeUpdateAllNew(Main * main) Line 4123	C++
 	blender.exe!blo_read_file_internal(FileData * fd, const char * filepath) Line 4021	C++
 	blender.exe!BLO_read_from_file(const char * filepath, eBLOReadSkip skip_flags, BlendFileReadReport * reports) Line 367	C++
 	blender.exe!BKE_blendfile_read(const unsigned char * filepath, const BlendFileReadParams * params, BlendFileReadReport * reports) Line 497	C
 	blender.exe!WM_file_read(bContext * C, const unsigned char * filepath, ReportList * reports) Line 939	C
 	blender.exe!wm_file_read_opwrap(bContext * C, const unsigned char * filepath, ReportList * reports) Line 2535	C
 	blender.exe!wm_open_mainfile__open(bContext * C, wmOperator * op) Line 2657	C
 	blender.exe!operator_state_dispatch(bContext * C, wmOperator * op, OperatorDispatchTarget * targets) Line 2571	C
 	blender.exe!wm_open_mainfile_dispatch(bContext * C, wmOperator * op) Line 2682	C
 	blender.exe!wm_open_mainfile__discard_changes(bContext * C, wmOperator * op) Line 2611	C
 	blender.exe!operator_state_dispatch(bContext * C, wmOperator * op, OperatorDispatchTarget * targets) Line 2571	C
 	blender.exe!wm_open_mainfile_dispatch(bContext * C, wmOperator * op) Line 2682	C
 	blender.exe!wm_open_mainfile_invoke(bContext * C, wmOperator * op, const wmEvent * UNUSED_event) Line 2687	C
 	blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, const wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1434	C++
 	blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const wmOperatorCallContext context, const bool poll_only, const wmEvent * event) Line 1674	C++
 	blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, wmOperatorCallContext context, PointerRNA * properties, const wmEvent * event) Line 1689	C++
 	blender.exe!WM_operator_name_call_ptr_with_depends_on_cursor(bContext * C, wmOperatorType * ot, wmOperatorCallContext opcontext, PointerRNA * properties, const wmEvent * event, const char * drawstr) Line 1882	C++
 	blender.exe!ui_apply_but_funcs_after(bContext * C) Line 1022	C
 	blender.exe!ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) Line 11529	C
 	blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 777	C++
 	blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3208	C++
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3325	C++
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3916	C++
 	blender.exe!WM_main(bContext * C) Line 643	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 579	C
 	[External Code]	

But this file has a weird node tree type, probably the result of some addon:
image.png

I'm not sure if this can really be considered a complete bug report because, like in case of corrupted mesh, we may need to know what caused this corrupted tree.

I can confirm the crash on reading and updating node tree: `link->tosock was nullptr` ```lines=20 > blender.exe!blender::bke::node_tree_runtime::update_internal_links(const bNodeTree & ntree) Line 80 C++ blender.exe!blender::bke::node_tree_runtime::ensure_topology_cache::__l2::<lambda_1>::operator()() Line 405 C++ blender.exe!blender::FunctionRef<void __cdecl(void)>::callback_fn<`blender::bke::node_tree_runtime::ensure_topology_cache'::`2'::<lambda_1>>(__int64 callable) Line 95 C++ blender.exe!blender::FunctionRef<void __cdecl(void)>::operator()() Line 132 C++ blender.exe!tbb::interface7::internal::delegated_function<blender::FunctionRef<void __cdecl(void)> const ,void>::operator()() Line 97 C++ [External Code] blender.exe!tbb::interface7::internal::isolate_impl<void,blender::FunctionRef<void __cdecl(void)> const>(const blender::FunctionRef<void __cdecl(void)> & f) Line 217 C++ blender.exe!tbb::interface7::this_task_arena::isolate<blender::FunctionRef<void __cdecl(void)>>(const blender::FunctionRef<void __cdecl(void)> & f) Line 473 C++ blender.exe!blender::threading::isolate_task<blender::FunctionRef<void __cdecl(void)>>(const blender::FunctionRef<void __cdecl(void)> & function) Line 136 C++ blender.exe!blender::bke::node_tree_runtime::double_checked_lock_with_task_isolation::__l2::<lambda_1>::operator()() Line 42 C++ blender.exe!blender::FunctionRef<void __cdecl(void)>::callback_fn<`blender::bke::node_tree_runtime::double_checked_lock_with_task_isolation'::`2'::<lambda_1>>(__int64 callable) Line 95 C++ blender.exe!blender::FunctionRef<void __cdecl(void)>::operator()() Line 132 C++ blender.exe!blender::bke::node_tree_runtime::double_checked_lock(std::mutex & mutex, bool & data_is_dirty, blender::FunctionRef<void __cdecl(void)> fn) Line 35 C++ blender.exe!blender::bke::node_tree_runtime::double_checked_lock_with_task_isolation(std::mutex & mutex, bool & data_is_dirty, blender::FunctionRef<void __cdecl(void)> fn) Line 43 C++ blender.exe!blender::bke::node_tree_runtime::ensure_topology_cache(const bNodeTree & ntree) Line 425 C++ blender.exe!bNodeTree::ensure_topology_cache() Line 432 C++ blender.exe!blender::bke::NodeTreeMainUpdater::update_socket_link_and_use(bNodeTree & tree) Line 1022 C++ blender.exe!blender::bke::NodeTreeMainUpdater::update_tree(bNodeTree & ntree) Line 985 C++ blender.exe!blender::bke::NodeTreeMainUpdater::update_rooted(blender::Span<bNodeTree *> root_ntrees) Line 847 C++ blender.exe!blender::bke::NodeTreeMainUpdater::update() Line 816 C++ blender.exe!BKE_ntree_update_main(Main * bmain, NodeTreeUpdateExtraParams * params) Line 1706 C++ blender.exe!ntreeUpdateAllNew(Main * main) Line 4123 C++ blender.exe!blo_read_file_internal(FileData * fd, const char * filepath) Line 4021 C++ blender.exe!BLO_read_from_file(const char * filepath, eBLOReadSkip skip_flags, BlendFileReadReport * reports) Line 367 C++ blender.exe!BKE_blendfile_read(const unsigned char * filepath, const BlendFileReadParams * params, BlendFileReadReport * reports) Line 497 C blender.exe!WM_file_read(bContext * C, const unsigned char * filepath, ReportList * reports) Line 939 C blender.exe!wm_file_read_opwrap(bContext * C, const unsigned char * filepath, ReportList * reports) Line 2535 C blender.exe!wm_open_mainfile__open(bContext * C, wmOperator * op) Line 2657 C blender.exe!operator_state_dispatch(bContext * C, wmOperator * op, OperatorDispatchTarget * targets) Line 2571 C blender.exe!wm_open_mainfile_dispatch(bContext * C, wmOperator * op) Line 2682 C blender.exe!wm_open_mainfile__discard_changes(bContext * C, wmOperator * op) Line 2611 C blender.exe!operator_state_dispatch(bContext * C, wmOperator * op, OperatorDispatchTarget * targets) Line 2571 C blender.exe!wm_open_mainfile_dispatch(bContext * C, wmOperator * op) Line 2682 C blender.exe!wm_open_mainfile_invoke(bContext * C, wmOperator * op, const wmEvent * UNUSED_event) Line 2687 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, const wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1434 C++ blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const wmOperatorCallContext context, const bool poll_only, const wmEvent * event) Line 1674 C++ blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, wmOperatorCallContext context, PointerRNA * properties, const wmEvent * event) Line 1689 C++ blender.exe!WM_operator_name_call_ptr_with_depends_on_cursor(bContext * C, wmOperatorType * ot, wmOperatorCallContext opcontext, PointerRNA * properties, const wmEvent * event, const char * drawstr) Line 1882 C++ blender.exe!ui_apply_but_funcs_after(bContext * C) Line 1022 C blender.exe!ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) Line 11529 C blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 777 C++ blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3208 C++ blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3325 C++ blender.exe!wm_event_do_handlers(bContext * C) Line 3916 C++ blender.exe!WM_main(bContext * C) Line 643 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 579 C [External Code] ``` But this file has a weird node tree type, probably the result of some addon: ![image.png](https://archive.blender.org/developer/F13531806/image.png) I'm not sure if this can really be considered a complete bug report because, like in case of corrupted mesh, we may need to know what caused this corrupted tree.
Author

This is custom tree of Sverchok add-on. Also the tree includes group nodes with subtrees.

image.png

It works on 3.0.1. I'm curious is it because 3.0.1 can handle corrupted links or there are no such there?
By the way the tree could be created in some non stable Blender version what also can lead to the problem.
Don't know what extra information I can give more.

This is custom tree of Sverchok add-on. Also the tree includes group nodes with subtrees. ![image.png](https://archive.blender.org/developer/F13538115/image.png) It works on 3.0.1. I'm curious is it because 3.0.1 can handle corrupted links or there are no such there? By the way the tree could be created in some non stable Blender version what also can lead to the problem. Don't know what extra information I can give more.
Member

Added subscribers: @JacquesLucke, @PratikPB2123

Added subscribers: @JacquesLucke, @PratikPB2123
Member

Those three node trees somehow leads to crash. I've not tested yet with Sverchok add-on though.
Try to append nodetree(s) in default .blend file, this will also trigger the crash.
Not sure if it's add-on or a bug in blender.
cc @JacquesLucke

Those three node trees somehow leads to crash. I've not tested yet with `Sverchok` add-on though. Try to append nodetree(s) in default .blend file, this will also trigger the crash. Not sure if it's add-on or a bug in blender. cc @JacquesLucke

This issue was referenced by 5379587772

This issue was referenced by 53795877727d67185de858a480c8090ca7eb8e36
Member

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Jacques Lucke self-assigned this 2022-10-24 19:02:31 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101210
No description provided.